# link-fetchers

./: .gitignore  README.md  main.py  pyproject.toml
link_fetchers/: __init__.py  base_fetcher.py  fetcher_registry.py  tls_client.py  utils.py
link_fetchers/fetchers/: box_fetcher.py  chatgpt_fetcher.py  dropbox_transfer_fetcher.py  filemail_fetcher.py  fourshared_fetcher.py  gofile_fetcher.py  limewire_fetcher.py  mediafire_fetcher.py  mega_fetcher.py  sendanywhere_fetcher.py  sendgb_fetcher.py  smash_fetcher.py  terabox_fetcher.py  transfernow_fetcher.py  transferxl_fetcher.py  turbobit_fetcher.py  wetransfer_fetcher.py  wormhole_fetcher.py
tests/link_fetchers/: test_fetcher_factories.py  test_fetchers.py  test_runner_state.py  test_utils.py
